appId: com.zoutigo.scoliveapp
name: Login Google
tags:
  - auth
  - google
---
- runFlow:
    when:
      visible: "Process system isn't responding"
    commands:
      - tapOn: "Wait"
- runFlow:
    when:
      visible: "System UI isn't responding"
    commands:
      - tapOn: "Wait"
- extendedWaitUntil:
    visible: "Valery MBELE"
    timeout: 30000
- assertVisible: "Administrateur"
- assertVisible: "Gérer les écoles"
- assertNotVisible:
    id: "submit-login"
