appId: com.zoutigo.scoliveapp
name: Login Phone
tags:
  - auth
  - phone
---
- runFlow:
    when:
      visible: "Process system isn't responding"
    commands:
      - tapOn: "Wait"
- runFlow:
    when:
      visible: "System UI isn't responding"
    commands:
      - tapOn: "Wait"
- extendedWaitUntil:
    visible:
      id: "submit-login"
    timeout: 30000
- tapOn:
    id: "input-phone"
- inputText: "650000001"
- hideKeyboard
- tapOn:
    id: "input-pin"
- inputText: "123456"
- hideKeyboard
- tapOn:
    id: "submit-login"
- extendedWaitUntil:
    visible:
      id: "logout-button"
    timeout: 20000
- assertVisible:
    id: "user-name"
- tapOn:
    id: "logout-button"
- extendedWaitUntil:
    visible:
      id: "submit-login"
    timeout: 10000
